--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -2,7 +2,7 @@
 
   <div class="pageHeader">
     <mat-icon class="icon" fontSet="material-symbols-rounded">function</mat-icon>
-    <h1>Dividendenrechner</h1>
+    <h1>{{ "header.menu.calculator" | translate }}</h1>
   </div>
 
   <div *ngIf="!showResult">
