--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -2,7 +2,7 @@
 
   <div class="pageHeader">
     <mat-icon class="icon" fontSet="material-symbols-rounded">groups</mat-icon>
-    <h1>Community</h1>
+    <h1>{{ "header.menu.community" | translate }}</h1>
   </div>
 
   <div>
