--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -2,7 +2,7 @@
 
   <div class="pageHeader">
     <mat-icon class="icon" fontSet="material-symbols-rounded">menu_book</mat-icon>
-    <h1>Dokumentation</h1>
+    <h1>{{ "header.menu.documentation" | translate }}</h1>
   </div>
 
   <div class="disclaimer">
