--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -18,7 +18,7 @@
 
     <div class="pageHeader">
       <mat-icon class="icon" fontSet="material-symbols-rounded">brand_awareness</mat-icon>
-      <h1>Neuigkeiten</h1>
+      <h1>{{ "header.menu.news" | translate }}</h1>
     </div>
 
     <mat-card>
