--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -8,13 +8,12 @@
   <div>
     <mat-card appearance="outlined">
       <mat-card-header>
-        <h2>Philosophie</h2>
+        <h2>{{ "community.philosophy.title" | translate }}</h2>
       </mat-card-header>
       <mat-card-content>
-        <p class="paragraph">Der Dividendenrechner ist ein reines Spaßprojekt ohne irgendein kommerzielles Interesse.
-        Ich wollte zunächst einfach meine Idee eines Dividendenrechners umsetzen. Insbesondere über Twitter/X sind dann
-        viele super Ideen eingeflossen.</p>
-        <p class="paragraph">So würde ich heute sagen, dass ist bereits ein kleines Community-Projekt und ich bin gespannt was die Zeit hier noch bringt.</p>
+        <span
+          [innerHTML]="'community.philosophy.content' | translate">
+        </span>
       </mat-card-content>
     </mat-card>
 
@@ -22,10 +21,12 @@
 
     <mat-card appearance="outlined">
       <mat-card-header>
-        <h2>Kontakt</h2>
+        <h2>{{ "community.contact.title" | translate }}</h2>
       </mat-card-header>
       <mat-card-content>
-        E-Mail Addresse kommt noch, aber bis dahin bin ich auf jeden Fall über Twitter/X zu erreichen:
+        <span
+          [innerHTML]="'community.contact.content' | translate">
+        </span>&nbsp;
         <a href="https://x.com/AktienTraum" target="_blank">&#64;AktienTraum</a>.
       </mat-card-content>
     </mat-card>
@@ -34,11 +35,13 @@
 
     <mat-card appearance="outlined">
       <mat-card-header>
-        <h2>Source Code</h2>
+        <h2>{{ "community.sourcecode.title" | translate }}</h2>
       </mat-card-header>
       <mat-card-content>
-        Wer Interesse hat kann sich den Source Code zum Projekt gerne auf
-        <a href="https://github.com/AktienTraum/dividendenrechner" target="_blank">Github</a> anschauen.
+        <span
+          [innerHTML]="'community.sourcecode.content' | translate">
+        </span>&nbsp;
+        <a href="https://github.com/AktienTraum/dividendenrechner" target="_blank">Github</a>
       </mat-card-content>
     </mat-card>
 
