--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -6,17 +6,8 @@
   </div>
 
   <div class="disclaimer">
-    <p>Im Vergleich zum "alten" Dividendenrechner, der noch Teil es AktienTraum-Blogs war (den es nicht mehr gibt ;-)),
-      hat es einige grundlegende Veränderungen in der Berechnung gegeben.</p>
-    <p>Bei dem alten Rechner war die Dividendenrendite der führende Faktor. Diese wurde aber mit der Zeit zu schnell
-      zu groß, da u. A. die dämpfende Wirkung von Kurssteigerungen auf die Dividendenrendite nicht berücksichtigt
-      wurde.</p>
-    <p>Um dieses Problem zu umgehen, simuliert der neue Dividendenrechner im Hintergrund den Kauf von Aktien.
-      Auf diesen Aktien wird dann die Dividende berechnet und diese Dividende führt dann - zusammen mit dem
-      Aktienkurs - zur Dividendenrendite.</p>
-    <p>Auch wird jetzt immer mit Netto-Werten gerechnet, es sei denn man gibt beim Zinssatz eine Null ein.
-      Denn nur dann ist das zur Verfügung stehende Kapital für Aktienkäufe aus den Dividenden realistisch.</p>
-    <p>Mehr Details zur Berechnung werden hier nach und nach dokumentiert und sind ansonsten natürlich auch aus dem
-      <a href="https://github.com/AktienTraum/dividendenrechner" target="_blank">Source Code</a> ersichtlich.</p>
+    <span
+      [innerHTML]="'documentation.disclaimer' | translate">
+    </span>
   </div>
 </div>
