--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,52 +1,26 @@
-<h1>Impressum</h1>
+<h1>{{ "footer.menu.imprint" | translate }}</h1>
 
 <div class="imprintText">
-  Dies ist eine rein private Seite ohne jegliches kommerzielles Interesse und benötigt damit kein Impressum.
-  Trotzdem möchte ich hier ein paar grundlegende Angaben machen.
+  {{ "imprint.preface" | translate }}
 </div>
 
-<h3>Kontakt</h3>
+<h3>{{ "imprint.contact" | translate }}</h3>
 <p>Thomas Jaspers: tritom42&#64;googlemail.com</p>
 
-<h3>Haftung für Inhalte</h3>
+<h3>{{ "imprint.header-1" | translate }}</h3>
 <div class="imprintText">
-  Es wird keine Haftung für die Korrektheit oder Vollständigkeit der hier durchgeführten Berechnungen übernommen.
-  Alle Ergebnisse können falsch sein und es obliegt dem Benutzer diese zu prüfen. Es dürfen keine Entscheidungen
-  basierend auf den
-  Ergebnissen dieses Dividenden-Rechners getroffen werden. Dies ist ein reines Spaßprojekt
-  <p></p>
-  Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben
-  hiervon unberührt.
-  Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich.
-  Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden ich diese Inhalte umgehend entfernen.
+  {{ "imprint.content-1" | translate }}
 </div>
 
-<h3>Haftung für Links</h3>
+<h3>{{ "imprint.header-2" | translate }}</h3>
 <div class="imprintText">
-  Diese Webseite enthält Links zu externen Websites Dritter, auf deren Inhalte ich keinen Einfluss haben.
-  Deshalb kann ich für diese fremden Inhalte auch keine Gewähr übernehmen.
-  Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
-  Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
-  Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.
-  <p></p>
-  Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer
-  Rechtsverletzung nicht zumutbar.
-  Bei Bekanntwerden von Rechtsverletzungen werde ich derartige Links umgehend entfernen.
+  {{ "imprint.content-2" | translate }}
 </div>
 
-<h3>Urheberrecht</h3>
+<h3>{{ "imprint.header-3" | translate }}</h3>
 <div class="imprintText">
-  Die durch den Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
-  Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes
-  bedürfen der schriftlichen
-  Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht
-  kommerziellen Gebrauch gestattet.
-  <p></p>
-  Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet.
-  Insbesondere werden Inhalte Dritter als solche gekennzeichnet.
-  Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitte ich um einen entsprechenden Hinweis.
-  Bei Bekanntwerden von Rechtsverletzungen werde ich derartige Inhalte umgehend entfernen.
+  {{ "imprint.content-3" | translate }}
 </div>
 <p></p>
-Quelle: Frei nach <a href="https://www.e-recht.de" target="_blank">e-recht24.de</a>
+{{ "imprint.disclaimer" | translate }} <a href="https://www.e-recht.de" target="_blank">e-recht24.de</a>
 
