--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -2,12 +2,9 @@
   <mat-card>
     <mat-card-header class="newHeadline">Release 1.0.1 (28.09.2024)</mat-card-header>
     <mat-card-content>
-      <p>FinTwit ist direkt in den Test gegangen und hat bemerkt, dass die Dividende im ersten Jahr brutto angezeigt
-        wird.</p>
-      <p>Im Prinzip kann über das aktuelle Jahr nicht viel ausgesagt werden, zumal dies ja die Summe alle bisherigen
-        Jahre anzeigt, die man investiert hat. Daher wird diese Zeile in der Ergebnistabelle
-        jetzt farblich hervorgehoben und die meisten Werte werden nicht angezeigt.</p>
-      <p>An den Ergebnissen der Berechnung über die Zeit ändert sich durch diese Anpassung nichts.</p>
+      <span
+        [innerHTML]="'news.release-1.0.1' | translate">
+      </span>
     </mat-card-content>
   </mat-card>
 }
@@ -24,12 +21,9 @@
     <mat-card>
       <mat-card-header class="newHeadline">Release 1.0.1 (28.09.2024)</mat-card-header>
       <mat-card-content>
-        <p>FinTwit ist direkt in den Test gegangen und hat bemerkt, dass die Dividende im ersten Jahr brutto angezeigt
-          wird.</p>
-        <p>Im Prinzip kann über das aktuelle Jahr nicht viel ausgesagt werden, zumal dies ja die Summe alle bisherigen
-          Jahre anzeigt, die man investiert hat. Daher wird diese Zeile in der Ergebnistabelle
-          jetzt farblich hervorgehoben und die meisten Werte werden nicht angezeigt.</p>
-        <p>An den Ergebnissen der Berechnung über die Zeit ändert sich durch diese Anpassung nichts.</p>
+        <span
+          [innerHTML]="'news.release-1.0.1' | translate">
+        </span>
       </mat-card-content>
     </mat-card>
 
@@ -38,13 +32,9 @@
     <mat-card>
       <mat-card-header class="newHeadline">Release 1.0.0 (28.09.2024)</mat-card-header>
       <mat-card-content>
-        <p>Die Vorschau-Phase ist abgeschlossen und das Release 1.0.0 ist jetzt online.</p>
-        <p>Es sind dei meisten Features des "alten" AktienTraum-Rechners implementiert, wobei der Berechnungsansatz
-          bereits ein Stück weit umgestellt wurde. Im Hintergrund wird jetzt der Kauf von Aktien simuliert.
-          Dies führt zu niedrigeren Ergebnissen im Vergleich zum bisherigen Dividendenrechner, allerdings sollten diese
-          deutlich realistischer sein.</p>
-        <p>In meinem Kopf schwirren noch eine Menge Ideen herum, so dass weitere Versionen hier nicht
-          lange auf sich warten lassen sollten.</p>
+        <span
+          [innerHTML]="'news.release-1.0.0' | translate">
+        </span>
       </mat-card-content>
     </mat-card>
 
