--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,3 +1,3 @@
-<h1>Datenschutz­erklärung</h1>
+<h1>{{ "footer.menu.privacy" | translate }}</h1>
 
-Auf dieser Webseite werden keine personenbezogenen Daten verarbeitet oder gespeichert.
+{{ "privacy.content" | translate }}
