--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,9 +1,9 @@
 @if (!showFull) {
   <mat-card>
-    <mat-card-header class="newHeadline">Release 1.0.1 (28.09.2024)</mat-card-header>
+    <mat-card-header class="newHeadline">Release 2.0.0 (30.09.2024)</mat-card-header>
     <mat-card-content>
       <span
-        [innerHTML]="'news.release-1.0.1' | translate">
+        [innerHTML]="'news.release-2.0.0' | translate">
       </span>
     </mat-card-content>
   </mat-card>
@@ -17,6 +17,15 @@
       <mat-icon class="icon" fontSet="material-symbols-rounded">brand_awareness</mat-icon>
       <h1>{{ "header.menu.news" | translate }}</h1>
     </div>
+
+    <mat-card>
+      <mat-card-header class="newHeadline">Release 2.0.0 (30.09.2024)</mat-card-header>
+      <mat-card-content>
+        <span
+          [innerHTML]="'news.release-2.0.0' | translate">
+        </span>
+      </mat-card-content>
+    </mat-card>
 
     <mat-card>
       <mat-card-header class="newHeadline">Release 1.0.1 (28.09.2024)</mat-card-header>
