--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -90,7 +90,7 @@
                 </td>
                 <td [ngClass]="{'baseRow': y == 0}">
                   <span *ngIf="y > 0">
-                    {{ elem.shares.payment | number:'1.2-2':'de-DE' }}
+                    {{ elem.kpis.investedSumPerYear | number:'1.2-2':'de-DE' }}
                   </span>
                   <span *ngIf="y == 0">
                     -
@@ -223,18 +223,40 @@
             <h2>{{ "calculator.graph.title" | translate }}</h2>
           </mat-card-header>
           <mat-card-content>
-            <ngx-charts-line-chart
-              [results]="data"
-              [view]="view"
-              [animations]="true"
-              [showGridLines]="true"
-              [legend]="true"
-              [legendTitle]="graphLegend()"
-              [roundDomains]="true"
-              [xAxis]="true"
-              [yAxis]="true"
-              [yAxisTickFormatting]="currencyFormatterLC"
-            ></ngx-charts-line-chart>
+            <mat-tab-group>
+              <mat-tab label='{{ "calculator.graph.investing.title" | translate }}'>
+                <div>
+                  <ngx-charts-line-chart
+                    [results]="dataPayments"
+                    [view]="view"
+                    [animations]="true"
+                    [showGridLines]="true"
+                    [legend]="true"
+                    [legendTitle]="graphLegend()"
+                    [roundDomains]="true"
+                    [xAxis]="true"
+                    [yAxis]="true"
+                    [yAxisTickFormatting]="currencyFormatterLC">
+                  </ngx-charts-line-chart>
+                </div>
+              </mat-tab>
+              <mat-tab label='{{ "calculator.graph.totalassets.title" | translate }}'>
+                <div>
+                  <ngx-charts-line-chart
+                    [results]="dataTotalAssets"
+                    [view]="view"
+                    [animations]="true"
+                    [showGridLines]="true"
+                    [legend]="true"
+                    [legendTitle]="graphLegend()"
+                    [roundDomains]="true"
+                    [xAxis]="true"
+                    [yAxis]="true"
+                    [yAxisTickFormatting]="currencyFormatterLC">
+                  </ngx-charts-line-chart>
+                </div>
+              </mat-tab>
+            </mat-tab-group>
           </mat-card-content>
         </mat-card>
       </div>
@@ -272,6 +294,13 @@
               <input matInput type="number" formControlName="initialInvestment">
             </mat-form-field>
 
+            <mat-form-field>
+              <mat-label>{{ "calculator.form.initialDividends" | translate }}</mat-label>
+              <input matInput type="number" formControlName="initialDividends">
+            </mat-form-field>
+          </div>
+
+          <div class="formRow">
             <mat-form-field>
               <mat-label>{{ "calculator.form.initialPriceGains" | translate }}</mat-label>
               <input matInput type="number" formControlName="initialPriceGains">
